--- a/donate-items/src/scss/_homecontact.scss
+++ b/donate-items/src/scss/_homecontact.scss
@@ -52,7 +52,7 @@ footer{
            height: 3.98rem;
           // width: 100%;
          }
-         span{
+         .main_dec{
              position: absolute;
              bottom: 0%;
              left: 15%;                  
