--- a/donate-items/src/scss/_homecontact.scss
+++ b/donate-items/src/scss/_homecontact.scss
@@ -108,8 +108,7 @@ footer{
         }
         .group_text{
          //  position: absolute;
-            height: 9.39rem;
-            border-bottom: 1px solid #707070;
+            border-bottom: 0.1rem solid #707070;
             margin-top: 3rem;
            // bottom: 27.5%;
             width: 100%;
