--- a/donate-items/src/scss/main.scss
+++ b/donate-items/src/scss/main.scss
@@ -11,8 +11,10 @@
   @import "./settings/color";
   @import "./settings/general";
   @import './settings/grid';
+  @import './navigation';
+  @import './login';
   @import "./homecontact";
-  @import "./header";
+  @import "./mainSection";
   @import "./threeCol";
   @import "./core4steps"; 
   @import './aboutUs';
