--- a/donate-items/src/scss/_navigation.scss
+++ b/donate-items/src/scss/_navigation.scss
@@ -37,14 +37,19 @@ nav{
               padding: 0.7rem 1.64rem;
               transition: border 0.3s ease-out;
               font-size: 1.4rem;
-              color: #3C3C3C;
+              
               cursor: pointer;
              // display: block;
              &:hover{
                  opacity: 0.75;           
                  border: 0.05rem solid #3C3C3C                        
              }
-          }                
+             a{
+                text-decoration: none;
+                color: #3C3C3C;
+            }
+          } 
+                    
       }
     }       
 }
