--- a/donate-items/src/scss/main.scss
+++ b/donate-items/src/scss/main.scss
@@ -19,6 +19,8 @@
   @import "./core4steps"; 
   @import './aboutUs';
   @import './help';
+  @import 'register';
+  @import 'loggedOut';
 
   html{
     font-family: $font-base;
