--- a/donate-items/src/scss/_homecontact.scss
+++ b/donate-items/src/scss/_homecontact.scss
@@ -1,118 +1,116 @@
-footer{
-
+footer {
     height: 100vh;
-    background:url("../assets/images/Background-Contact-Form.jpg") #FFFFFFC9 0% 0% no-repeat;    
+    background: url("../assets/images/Background-Contact-Form.jpg") #ffffffc9 0% 0% no-repeat;
     background-size: cover;
-    
+
     opacity: 1;
-    .container-opacity{
+    .container-opacity {
         background: rgba($color: #fff, $alpha: 0.8);
         width: 100%;
         height: 100%;
-        }
     }
-    .container-general{
-        width: 1200px;
-        margin: 0 auto;
-        height: 100%;
-        .copyright{
-           // position: relative;
-            width: 60.83%;
-            margin-left: 47rem;
-            margin-top: 20rem;
-            display: flex;
-            justify-content: space-between; 
-           p{
+}
+.container-general {
+    width: 1200px;
+    margin: 0 auto;
+    height: 100%;
+    .copyright {
+        // position: relative;
+        width: 60.83%;
+        margin-left: 47rem;
+        margin-top: 20rem;
+        display: flex;
+        justify-content: space-between;
+        p {
             font-size: 1.23rem;
             line-height: 1.64rem;
             letter-spacing: 0;
-            color: #3C3C3C;
+            color: #3c3c3c;
             display: flex;
             align-items: flex-end;
-          }
+        }
         // display: flex;
         // justify-content: flex-end;
-    }   
-    .headerFoot{
+    }
+    .headerFoot {
         margin: 0 auto;
         height: 7.52rem;
         width: 24.88rem;
         position: relative;
         //left: 68.7%;
         //top: 19.5%;
-         .contactTitle{
-           color: #3C3C3C;
-           //text-align: center;
-           font-family: $font-base;
-           font-size: 2.6rem; 
-           letter-spacing: -0.058rem;   
-           opacity: 1;
-           display: inline-block;
-           line-height: 4.21rem; 
-           height: 3.98rem;
-          // width: 100%;
-         }
-         .main_dec{
-             position: absolute;
-             bottom: 0%;
-             left: 15%;                  
-             display: block;
-             width: 17.58rem;
-             height: 2.53rem;
-             opacity: 1;
-             background-image: url(../assets/images/Decoration.svg);
-             background-size: contain;
-         }
-       }
-    form{
+        .contactTitle {
+            color: #3c3c3c;
+            //text-align: center;
+            font-family: $font-base;
+            font-size: 2.6rem;
+            letter-spacing: -0.058rem;
+            opacity: 1;
+            display: inline-block;
+            line-height: 4.21rem;
+            height: 3.98rem;
+            // width: 100%;
+        }
+        .main_dec {
+            position: absolute;
+            bottom: 0%;
+            left: 15%;
+            display: block;
+            width: 17.58rem;
+            height: 2.53rem;
+            opacity: 1;
+            background-image: url(../assets/images/Decoration.svg);
+            background-size: contain;
+        }
+    }
+    form {
         position: relative;
         width: 36.69rem;
         height: 36.2rem;
         display: inline-block;
         margin-left: 83.31rem;
         margin-top: 12rem;
-       // left: 64.7%;
+        // left: 64.7%;
         //right: 7.5%;
-       // top: 37%;
-       ::placeholder{
-        color:#3C3C3C26;
-       }
-        .sameLabel{
+        // top: 37%;
+        ::placeholder {
+            color: #3c3c3c26;
+        }
+        .sameLabel {
             margin-top: 5rem;
-            label{
-
-            text-align: left;
-            font-size: 1.1rem;  
-            line-height: 2.47rem;
-            letter-spacing: 0;  
-            font-family: "Semibold";
-            color: #3C3C3C;
-            display: inline-block;
+            label {
+                text-align: left;
+                font-size: 1.1rem;
+                line-height: 2.47rem;
+                letter-spacing: 0;
+                font-family: "Semibold";
+                color: #3c3c3c;
+                display: inline-block;
             }
-            input{
+            input {
                 font-size: 1.23rem;
                 text-align: left;
                 display: block;
-                border:none
+                border: none;
             }
         }
-        .group_nick{
+        .group_nick {
             height: 4.43rem;
             width: 17.79rem;
             display: inline-block;
             border-bottom: 1px solid #707070;
-            // margin-top: 1rem;    
-        } 
-        .email{
+            // margin-top: 1rem;
+        }
+        .email {
             margin-left: 1.1rem;
         }
-        .group_text{
-         //  position: absolute;
+        .group_text {
+            //  position: absolute;
             border-bottom: 0.1rem solid #707070;
             margin-top: 3rem;
-           // bottom: 27.5%;
+            // bottom: 27.5%;
             width: 100%;
-            textarea{
+            textarea {
                 height: 6.92rem;
                 width: 100%;
                 text-align: left;
@@ -121,10 +119,10 @@ footer{
                 display: block;
                 border: none;
                 resize: none;
-            } 
-        }  
-        .sendMessage{
-            border: 0.75px solid #3C3C3C;
+            }
+        }
+        .sendMessage {
+            border: 0.75px solid #3c3c3c;
             position: absolute;
             font-family: "Light";
             font-size: 1.23rem;
@@ -135,11 +133,11 @@ footer{
             bottom: 0rem;
             margin-left: 26.1rem;
             padding: 0.928rem 3.61rem;
-        }          
+        }
     }
 }
 
-.validateSucess{
+.validateSucess {
     position: absolute;
     color: #4caf50;
     width: 17rem;
