--- a/donate-items/src/scss/_aboutUs.scss
+++ b/donate-items/src/scss/_aboutUs.scss
@@ -11,7 +11,7 @@
        .firstPart{
         &:before {
             content:"";
-            background-color:#F0F1F1;
+            background-color: $color1;
             position: absolute;
             height: 66.8rem;
             width: 50vw;
@@ -25,12 +25,11 @@
             width: 30.9rem;
             position: relative;
              p{
-               color: #3C3C3C;
+               color: $color5;
                font-family: $font-base;
                font-size: 2.6rem; 
                letter-spacing: -0.058rem;   
                opacity: 1;
-              // display: inline-block;
                line-height: 4.21rem; 
                height: 3.98rem;
                text-align: center;
@@ -52,7 +51,7 @@
             .about_Nori{
               font-size: 2rem;
               letter-spacing: -0.06rem;
-              color: #3C3C3C;
+              color: $color5;
               text-align: center;
               width: 48.7rem;
               margin: 0 auto;
