--- a/donate-items/src/scss/_homecontact.scss
+++ b/donate-items/src/scss/_homecontact.scss
@@ -2,10 +2,8 @@ footer {
     height: 100vh;
     background: url("../assets/images/Background-Contact-Form.jpg") #ffffffc9 0% 0% no-repeat;
     background-size: cover;
-
-    opacity: 1;
     .container-opacity {
-        background: rgba($color: #fff, $alpha: 0.8);
+        background: rgba($color: #FFF, $alpha: 0.8);
         width: 100%;
         height: 100%;
     }
@@ -15,7 +13,6 @@ footer {
     margin: 0 auto;
     height: 100%;
     .copyright {
-        // position: relative;
         width: 60.83%;
         margin-left: 47rem;
         margin-top: 20rem;
@@ -24,32 +21,24 @@ footer {
         p {
             font-size: 1.23rem;
             line-height: 1.64rem;
-            letter-spacing: 0;
-            color: #3c3c3c;
+            color: $color5;
             display: flex;
             align-items: flex-end;
         }
-        // display: flex;
-        // justify-content: flex-end;
     }
     .headerFoot {
         margin: 0 auto;
         height: 7.52rem;
         width: 24.88rem;
         position: relative;
-        //left: 68.7%;
-        //top: 19.5%;
         .contactTitle {
-            color: #3c3c3c;
-            //text-align: center;
+            color: $color5;
             font-family: $font-base;
             font-size: 2.6rem;
             letter-spacing: -0.058rem;
-            opacity: 1;
             display: inline-block;
             line-height: 4.21rem;
             height: 3.98rem;
-            // width: 100%;
         }
         .main_dec {
             position: absolute;
@@ -58,7 +47,6 @@ footer {
             display: block;
             width: 17.58rem;
             height: 2.53rem;
-            opacity: 1;
             background-image: url(../assets/images/Decoration.svg);
             background-size: contain;
         }
@@ -70,45 +58,44 @@ footer {
         display: inline-block;
         margin-left: 83.31rem;
         margin-top: 12rem;
-        // left: 64.7%;
-        //right: 7.5%;
-        // top: 37%;
         ::placeholder {
             color: #3c3c3c26;
         }
         .sameLabel {
             margin-top: 5rem;
+            position: relative;
             label {
                 text-align: left;
                 font-size: 1.1rem;
                 line-height: 2.47rem;
-                letter-spacing: 0;
                 font-family: "Semibold";
-                color: #3c3c3c;
+                color: $color5;
                 display: inline-block;
             }
             input {
                 font-size: 1.23rem;
+                line-height: 2rem;
                 text-align: left;
                 display: block;
                 border: none;
+                border-bottom: 1px solid $color4;
+                outline: none;
+            }
+            p {
+                position: absolute;
+                left: 0rem;
             }
         }
         .group_nick {
             height: 4.43rem;
             width: 17.79rem;
             display: inline-block;
-            border-bottom: 1px solid #707070;
-            // margin-top: 1rem;
         }
         .email {
             margin-left: 1.1rem;
         }
         .group_text {
-            //  position: absolute;
-            border-bottom: 0.1rem solid #707070;
             margin-top: 3rem;
-            // bottom: 27.5%;
             width: 100%;
             textarea {
                 height: 6.92rem;
@@ -119,10 +106,13 @@ footer {
                 display: block;
                 border: none;
                 resize: none;
+                border-bottom: 0.1rem solid $color4;
+                outline: none;
             }
         }
         .sendMessage {
-            border: 0.75px solid #3c3c3c;
+            background-color: #FFF;
+            border: 0.75px solid $color5;
             position: absolute;
             font-family: "Light";
             font-size: 1.23rem;
@@ -133,10 +123,15 @@ footer {
             bottom: 0rem;
             margin-left: 26.1rem;
             padding: 0.928rem 3.61rem;
+            outline: none;
+            transition: 0.3s ease-out;
+            cursor: pointer;
+            &:hover {
+                opacity: 0.5;
+            }
         }
     }
 }
-
 .validateSucess {
     position: absolute;
     color: #4caf50;
