--- a/donate-items/src/scss/_login.scss
+++ b/donate-items/src/scss/_login.scss
@@ -13,12 +13,11 @@
                 width: 17.6rem;
                 position: relative;
                 p {
-                    color: #3c3c3c;
+                    color: $color5;
                     text-align: center;
                     font-family: $font-base;
                     font-size: 2.6rem;
                     letter-spacing: -0.058rem;
-                    opacity: 1;
                     line-height: 4.21rem;
                     height: 3.98rem;
                 }
@@ -42,24 +41,24 @@
                     margin: 0 auto;
                     height: 16.8rem;
                     width: 28.6rem;
-                    background-color: #f0f1f1;
+                    background-color: $color1;
                     .data-user-one {
                         position: relative;
                         margin: 0 auto;
                         margin-top: 2.4rem;
                         width: 18.6rem;
                         height: 4.4rem;
-                        border-bottom: 0.1rem solid #707070;
+                        border-bottom: 0.1rem solid $color4;
                         font-family: "Semibold", "Open Sans";
                         font-size: 1.1rem;
-                        color: #3c3c3c;
+                        color: $color5;
                         input {
                             border: none;
                             position: absolute;
                             bottom: 0;
                             left: 0;
                             outline: none;
-                            background-color: #f0f1f1;
+                            background-color: $color1;
                         }
                     }
                 }
@@ -72,7 +71,7 @@
                     font-size: 1.3rem;
                     color: #000000;
                     input {
-                        border: 0.75px solid #3c3c3c;
+                        border: 0.75px solid $color5;
                         background-color: #fff;
                         height: 2.56rem;
                         width: 8.7rem;
@@ -80,7 +79,7 @@
                     button {
                         height: 2.56rem;
                         width: 8.7rem;
-                        border: 0.75px solid #3c3c3c;
+                        border: 0.75px solid $color5;
                         background-color: #fff;
                         a {
                             text-decoration: none;
