--- a/donate-items/src/scss/_navigation.scss
+++ b/donate-items/src/scss/_navigation.scss
@@ -1,55 +1,52 @@
-nav{
-    display: flex;
-    justify-content: flex-end;    
-    div{  
-        height: 7.34rem;
-        width:  50.7rem;
-        margin-top: 2.86rem;
-      .user{
-          display: flex;
-          justify-content: flex-end;
-          list-style-type: none;
-          li{
-              padding: 0.7rem 1.3rem;
-             // font: Regular 13px/79px Open Sans;
-              font-size: 1rem;
-              //line-height: 6.07rem;
-              letter-spacing: 0;
-              transition: border 0.3s ease-out;
-              &:hover{
-                opacity: 0.75;      
-                border: 0.1rem solid #FAD648;                     
-            }
-            a{
-                text-decoration: none;
-                color: #737373;
-            }
-             
-          }
+nav {
+  display: flex;
+  justify-content: flex-end;
+  div {
+    height: 7.34rem;
+    width: 50.7rem;
+    margin-top: 2.86rem;
+    .user {
+      display: flex;
+      justify-content: flex-end;
+      list-style-type: none;
+      li {
+        border: 0.1rem solid transparent;
+        font-size: 1rem;
+        letter-spacing: 0;
+        transition: border $color5 0.3s ease-out;
+        &:hover {
+          opacity: 0.5;
+          border: 0.1rem solid $color3;
+        }
+        a {
+          text-decoration: none;
+          color: $color4;
+          padding: 0.7rem 1.3rem;
+          display: inline-block;
+        }
       }
-      .menu{
-          display: flex;
-          justify-content: flex-end;
-          margin-top: 1.5rem;
-          //height: 3.24rem;
-          li{ 
-              list-style-type: none;
-              padding: 0.7rem 1.64rem;
-              transition: border 0.3s ease-out;
-              font-size: 1.4rem;
-              
-              cursor: pointer;
-             // display: block;
-             &:hover{
-                 opacity: 0.75;           
-                 border: 0.05rem solid #3C3C3C                        
-             }
-             a{
-                text-decoration: none;
-                color: #3C3C3C;
-            }
-          } 
-                    
+    }
+    .menu {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 1.5rem;
+      li {
+        list-style-type: none;
+        font-size: 1.4rem;
+        cursor: pointer;
+        border: 0.1rem solid transparent;
+        transition: border 0.3s ease-out;
+        &:hover {
+          opacity: 0.75;
+          border: 0.1rem solid $color5;
+        }
+        a {
+          text-decoration: none;
+          color: $color5;
+          padding: 0.7rem 1.64rem;
+          display: inline-block;
+        }
       }
-    }       
+    }
+  }
 }
