--- a/donate-items/src/scss/main.scss
+++ b/donate-items/src/scss/main.scss
@@ -21,6 +21,8 @@
   @import './help';
   @import 'register';
   @import 'loggedOut';
+  @import 'mainFormDonateItems';
+  @import 'formStepOne';
 
   html{
     font-family: $font-base;
