adding componets CTA, UserAction, NavSroll, Decor and to them

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,34 +1,27 @@
-@font-face {
-    font-family: 'Merriweather';
-    src: local('Merriweather'), url(../assets/fonts/Merriweather/Merriweather-Regular.ttf) format('truetype');
-  }
-  @font-face {
-    font-family: 'Open Sans';
-    src: local('Open Sans'), url(../assets/fonts/Open_Sans/OpenSans-Regular.ttf) format('truetype');
-  }  
-  @import "reset";
-  @import "./settings/font";
-  @import "./settings/color";
-  @import "./settings/general";
-  @import './settings/grid';
-  @import './navigation';
-  @import './login';
-  @import "./homecontact";
-  @import "./mainSection";
-  @import "./threeCol";
-  @import "./core4steps"; 
-  @import './aboutUs';
-  @import './help';
-  @import 'register';
-  @import 'loggedOut';
-  @import 'mainFormDonateItems';
-  @import 'formStepOne';
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,300&family=Open+Sans:ital,wght@0,300;0,400;1,400&display=swap");
+@import "reset-css";
+@import "reset";
+@import "./settings/font";
+@import "./settings/color";
+@import "./settings/general";
+@import "./Nav/navigation";
+@import "./Nav/userAction";
+@import "./Nav/navScroll";
+@import "./login";
+@import "./homecontact";
+@import "./decor";
+@import "./cta";
+@import "./mainSection";
+@import "./threeCol";
+@import "./core4steps";
+@import "./aboutUs";
+@import "./help";
+@import "register";
+@import "loggedOut";
+@import "mainFormDonateItems";
+@import "formStepOne";
 
-  html{
-    font-family: $font-base;
-    font-size: 10px;   
+body {
+  font-family: $font-base;
 }
-
-// * {
-//   outline:5px solid red;
-// }
