--- a/src/scss/_mainSection.scss
+++ b/src/scss/_mainSection.scss
@@ -1,72 +1,25 @@
 main {
-    height: 83.66vh;
+    height: 831px;
+    position: relative;
+    border: 1px solid transparent;
     .container {
         &:before {
             content: "";
-            background: url(../assets/images/Home-Hero-Image.jpg) -91.42% 0 no-repeat;
-            background-size: 76.6% 93.86%;
+            background: url(../assets/images/Home-Hero-Image.jpg);
             position: absolute;
-            height: 73.86rem;
-            width: 100rem;
-            left: 0;
-            bottom: -2.7rem;
-            z-index: -1;
+            height: 963px;
+            width: 1368px;
+            left: -483px;
+            right: 0;
+            top: -132px;
         }
-    }
-    .intro {
-        display: flex;
-        justify-content: flex-end;
-        .begin {
-            height: 27rem;
-            width: 58.6rem;
-            margin-right: 9rem;
-            margin-top: 16.2rem;
-            position: relative;
-            .titleOfBegin {
-                height: 8.25rem;
-                &::first-line {
-                    text-align: center;
-                }
-                font-size: 3.4rem;
-                letter-spacing: -0.058rem;
-                line-height: 4.21rem;
-                color: $color5;
-            }
-            .decoration {
-                display: block;
-                width: 17.58rem;
-                height: 2.53rem;
-                opacity: 1;
-                background-image: url(../assets/images/Decoration.svg);
-                background-size: contain;
-                position: absolute;
-                left: 32%;
-                margin-top: 1.93rem;
-            }
+        .main_content {
+            margin-left: 788px;
+            margin-top: 210px;
             .buttons {
                 display: flex;
                 justify-content: space-between;
-                margin-top: 8.7rem;
-                button {
-                    display: block;
-                    font-family: "Light";
-                    font-size: 3.2rem;
-                    border: 0.05rem solid $color5;
-                    transition: 0.3s ease-out;
-                    cursor: pointer;
-                    background-color: #ffffff;
-                    &:hover {
-                        opacity: 0.5;
-                    }
-                    a {
-                        text-decoration: none;
-                        color: $color5;
-                        height: 9.26rem;
-                        width: 26.85rem;
-                        padding: 0.9rem 4rem;
-                        display: inline-block;
-                    }
-                }
+                margin-top: 65px;
             }
         }
     }
