improving styles for TreeColumns

--- a/src/scss/Nav/_navScroll.scss
+++ b/src/scss/Nav/_navScroll.scss
@@ -1,28 +1,26 @@
 .menu {
     display: flex;
     justify-content: space-between;
-    margin-top: 26px;
-    &:hover li a {
-        border: none;
-    }
+    margin-top: 17px;
+    width: 100%;
+    &:hover li:nth-child(1) a {
+            @include settingBorder(transparent);
+        }
     .nav_menuBorder {
-        border: $main-border;
-        border-color: $main-color;
+        @include settingBorder($main-color);
     }
     li {
         font-size: 18px;
+        line-height: 24px;
         cursor: pointer;
-        a {
+        &:nth-child(1) a, a {
             text-decoration: none;
             color: $main-color;
             padding: 9px 20px;
             display: inline-block;
-            transition: opacity 0.3s ease-out;
-            &:hover {
-                opacity: 0.5;
-                border: $main-border;
-                border-color: $main-color;
-            }
+            transition: $main-transition;
+            @include settingBorder(transparent);
+            @include main-hover; 
         }
     }
 }
