--- a/src/scss/_mainSection.scss
+++ b/src/scss/_mainSection.scss
@@ -5,7 +5,7 @@ main {
     .container {
         &:before {
             content: "";
-            background: url(../assets/images/Home-Hero-Image.jpg);
+            background: url(../assets/images/Home-Hero-Image.webp);
             position: absolute;
             height: 963px;
             width: 1368px;
