--- a/src/scss/_threeCol.scss
+++ b/src/scss/_threeCol.scss
@@ -1,35 +1,39 @@
 .three_col {
-   background-color: $color3;
-   height: 37.4vh;
-   .statistics {
+   background-image: url("../assets/images/3-Columns-Background.webp");
+   height: 384px;
+   .three_colStatistics {
       display: flex;
       justify-content: space-between;
-      .oneOfThree {
-         width: 25.5rem;
-         height: 18.5rem;
-         margin-top: 3rem;
-         span {
-            margin-top: 1rem;
-            font-family: "Light" "Open Sans";
-            font-size: 7rem;
-            text-align: center;
-            color: $color2;
+      .one_col {
+         width: 334px;
+         height: 252px;
+         margin-top: 46px;
+         .one_colNum,
+         .one_colKind {
             display: block;
-         }
-         h3 {
-            margin-top: 2rem;
-            font-size: 1.23rem;
-            letter-spacing: -0.036rem;
-            color: $color5;
             text-align: center;
          }
-         p {
-            margin-top: 1.8rem;
-            font-family: "Light" "Merriweather";
-            font-size: 1.1rem;
-            letter-spacing: -0.032rem;
-            color: $color5;
+         .one_colNum {
+            font-weight: 300;
+            font-size: 90px;
+            color: #5e5322;
+            line-height: 122px;
+         }
+         .one_colKind {
+            font-size: 18px;
+            letter-spacing: -0.36px;
+            line-height: 30px;
+            color: $main-color;
+            margin-top: 10px;
+         }
+         .one_colText {
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 18px;
+            letter-spacing: -0.32px;
+            color: $main-color;
             text-align: center;
+            margin-top: 28px;
          }
       }
    }
