improving style for AboutUs and Steps4 components

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,7 +14,8 @@
 @import "./cta";
 @import "./mainSection";
 @import "./threeCol";
-@import "./core4steps";
+@import "./steps4/steps4";
+@import "./steps4/steps4_allSteps";
 @import "./aboutUs";
 @import "./help";
 @import "register";
