--- a/src/scss/_aboutUs.scss
+++ b/src/scss/_aboutUs.scss
@@ -1,82 +1,34 @@
 #aboutUs {
-  height: 66.8rem;
-  margin-top: 6rem;
-  .container_us {
+  height: 935px;
+  margin-top: 80px;
+  background-color: $back-grey;
+  border: 1px solid transparent;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    width: 50%;
     height: 100%;
-    .about {
-      height: 100%;
-      .firstPart,
-      .secondPart {
-        height: 100%;
-      }
-      .firstPart {
-        &:before {
-          content: "";
-          background-color: $color1;
-          position: absolute;
-          height: 66.8rem;
-          width: 50vw;
-          left: 0;
-          z-index: -1;
-        }
-        .headerFoot {
-          margin: 0 auto;
-          margin-top: 13.3rem;
-          height: 7.86rem;
-          width: 30.9rem;
-          position: relative;
-          p {
-            color: $color5;
-            font-family: $font-base;
-            font-size: 2.6rem;
-            letter-spacing: -0.058rem;
-            opacity: 1;
-            line-height: 4.21rem;
-            height: 3.98rem;
-            text-align: center;
-          }
-          .main_dec {
-            position: absolute;
-            bottom: 0%;
-            left: 22%;
-            display: block;
-            width: 17.58rem;
-            height: 2.53rem;
-            opacity: 1;
-            background-image: url(../assets/images/Decoration.svg);
-            background-size: contain;
-          }
-        }
-        .about_allNori {
-          margin-top: 3.93rem;
-          .about_Nori {
-            font-size: 2rem;
-            letter-spacing: -0.06rem;
-            color: $color5;
-            text-align: center;
-            width: 48.7rem;
-            margin: 0 auto;
-          }
-          img {
-            margin-top: 3.5rem;
-            margin-left: 29rem;
-          }
-        }
-      }
-      .secondPart {
-        &:before {
-          content: "";
-          background-image: url(../assets/images/People.jpg);
-          background-repeat: no-repeat;
-          background-size: cover;
-          background-position: 10% 100%;
-          position: absolute;
-          height: 66.8rem;
-          width: 50vw;
-          right: 0;
-          z-index: -1;
-        }
-      }
+    background-image: url("../assets/images/People.webp");
+    z-index: 1;
+  }
+  .aboutUsContent {
+    margin: 186px 0;
+    width: 660px;
+    position: relative;
+    .aboutUsText {
+      margin-top: 55px;
+      font-size: 30px;
+      line-height: 54px;
+      letter-spacing: -0.6px;
+      color: $main-color;
+      text-align: center;
+    }
+    .signature {
+      margin-top: 40px;
+      position: absolute;
+      right: 0;
     }
   }
 }
