adding whomHelp component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,7 +17,7 @@
 @import "./steps4/steps4";
 @import "./steps4/steps4_allSteps";
 @import "./aboutUs";
-@import "./help";
+@import "./whomHelp";
 @import "register";
 @import "loggedOut";
 @import "mainFormDonateItems";
