--- a/src/scss/_whomHelp.scss
+++ b/src/scss/_whomHelp.scss
@@ -1,65 +1,40 @@
-#toHelp {
-    height: 64.6rem;
-    margin-top: 5rem;
-    .container-help {
-        width: 92.8rem;
-        margin: 0 auto;
-        .headerFoot {
+#whomHelp {
+    margin-top: 70px;
+    .container {
+        width: 1344px;
+        .btnsWhomHelp {
+            height: 80px;
+            width: 792px;
             margin: 0 auto;
-            height: 7.86rem;
-            width: 30.9rem;
-            position: relative;
-            p {
-                color: $color5;
-                font-family: $font-base;
-                font-size: 2.6rem;
-                letter-spacing: -0.058rem;
-                opacity: 1;
-                text-align: center;
-                line-height: 4.21rem;
-                height: 3.98rem;
-                margin: 0 auto;
-            }
-            .main_dec {
-                position: absolute;
-                bottom: 0%;
-                left: 22%;
-                display: block;
-                width: 17.58rem;
-                height: 2.53rem;
-                opacity: 1;
-                background-image: url(../assets/images/Decoration.svg);
-                background-size: contain;
-            }
-        }
-        .whomSure {
-            height: 5.65rem;
-            width: 51.8rem;
-            margin: 0 auto;
-            margin-top: 3rem;
+            margin-top: 50px;
             display: flex;
             justify-content: space-between;
+            &:hover button {
+                @include settingBorder(transparent);
+            }
+        .whomHelpBorder {
+            @include settingBorder($main-color);
+        }
             button {
-                transition: border 0.3s ease-out;
-                width: 14.2rem;
-                padding: 1rem 2rem;
+                transition: $main-transition;
+                padding: 0 42px;
                 text-align: center;
-                font-size: 1.6rem;
-                color: $color5;
+                font-size: 24px;
+                color: $main-color;
                 cursor: pointer;
-                background-color: #FFF;
-                border: 0.075rem solid transparent;
+                background-color: #fff;
+                @include settingBorder(transparent);
                 outline: none;
-                &:hover {
-                    opacity: 0.75;
-                    border: 0.075rem solid $color5;
+                @include main-hover;
+                &:nth-child(2){
+                    margin: 0 65px;
                 }
             }
         }
-        .helpInfo {
+        .mainInfo {
             height: 42.5rem;
             margin-top: 3rem;
-            .briefInfo {
+            .introText {
                 height: 6.7rem;
                 width: 44.2rem;
                 margin: 0 auto;
