adding better logic and styles for Contact

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,6 @@
 @import "./nav/userAction";
 @import "./nav/navScroll";
 @import "./login";
-@import "./homecontact";
 @import "./decor";
 @import "./cta";
 @import "./mainSection";
@@ -21,6 +20,8 @@
 @import "./whomHelp/btnsWhomHelp";
 @import "./whomHelp/typeHelp";
 @import "./whomHelp/pagination";
+@import "./contact/contact";
+@import "./contact/form";
 @import "register";
 @import "loggedOut";
 @import "mainFormDonateItems";
