adding better logic and styles for Contact

--- a/src/scss/contact/_contact.scss
+++ b/src/scss/contact/_contact.scss
@@ -1,6 +1,6 @@
 footer {
     background: linear-gradient(rgba($color: #fff, $alpha: 0.8), rgba($color: #fff, $alpha: 0.8)),
-        url("../../assets/images/Background-Contact-Form.jpg");
+        url("../../assets/images/Background-Contact-Form.webp");
     height: 1026px;
     margin-top: 80px;
     .container {
